--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="p-3 text-center mt-5">
     <div class="w-25 border-top mb-3 mx-auto"></div>
+    <p>You reached the end; BloxTech Applications</p>
 </footer>
 {% include scripts.html %}
